# semantic_localization

semantic_localization/: CMakeLists.txt  package.xml  setup.py
semantic_localization/scripts/: call_annotate_node  convert_optitrack_to_ros.py  convert_yaml_data.py  correct_origin  label_node  origin_correction_angle.py  pose_prob_node  visualizer
semantic_localization/src/semantic_localization/utils/: __init__.py  conversions.py  detectron2.py
