<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_localization</name>
  <version>0.0.0</version>
  <description>The semantic_localization package</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>


  <license>BSD-2-Clause</license>

  <url type="bugtracker">https://github.com/MatthijsBurgh/semantic_localization/issues</url>
  <url type="repository">https://github.com/MatthijsBurgh/semantic_localization.git</url>


  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>


  <buildtool_depend>catkin</buildtool_depend>

</package>
